# onux

./: .gitignore  README.md  makefile  run-onux  run-tests
demo/: CMakeLists.txt  run
demo/cmake/functions/: cmake_dump.cmake  print_list.cmake
demo/cmake/modules/: FindGL.cmake  FindOnuxEngine.cmake
demo/resources/shaderSources/: multiTexture.frag
demo/src/: CameraControls.cpp  main.cpp
engine/: CMakeLists.txt  build  clean  run  run-demo  run-tests
engine/cmake/macros/: pkg_config_module.cmake  test_module_dependency.cmake
engine/cmake/modules/: FindAssimp.cmake  FindBoost.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGoogleTest.cmake  FindMagick++.cmake  Findyaml-cpp.cmake
engine/include/MACROS/: ONUX_MOVE_ONLY.hpp  ONUX_MOVE_ONLY_DEFS.hpp  ONUX_MOVE_ONLY_IMPLS.hpp  ONUX_PIMPL_COPY_DEFS.hpp  ONUX_PIMPL_COPY_IMPLS.hpp
engine/include/assets/: AssetManager.hpp  Model.hpp  Shaders.hpp  Textures.hpp  loadShaderPrograms.hpp  loadTextures.hpp
engine/include/engine/: Entity.hpp  GraphicsEngine.hpp  MeshRenderer.hpp  Renderable.hpp
engine/include/environment/: Window.hpp  inputRegistry.hpp
engine/include/exceptions/: Error.hpp  FileError.hpp
engine/include/gl/: GLData.hpp  ShaderObject.hpp  ShaderProgram.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
engine/include/graphics/: BufferData.hpp  BufferData.ipp  Camera.hpp  Image.hpp  Mesh.hpp  Model.hpp  Shader.hpp  ShaderSource.hpp  Transform.hpp  Vertex.hpp  VertexData.hpp
engine/include/resources/: Model.hpp  ModelScene.hpp  ResourceManager.hpp  Resources.hpp  Resources.ipp  Shader.hpp  loadResources.hpp  loadResources.ipp
engine/include/utils/: File.hpp  UniqueMap.hpp  UniqueMap.ipp  ValidGLValues.hpp  accumulate.hpp  contains.hpp  existsIn.hpp  getExtension.hpp  keys.hpp  pathRelativeTo.hpp  removeSubString.hpp  split.hpp  toString.hpp  transform.hpp  values.hpp
engine/src/assets/: AssetManager.cpp  Model.cpp  Shaders.cpp  Textures.cpp  loadShaderPrograms.cpp  loadTextures.cpp
engine/src/engine/: Entity.cpp  GraphicsEngine.cpp  MeshRenderer.cpp  Renderable.cpp
engine/src/environment/: Window.cpp
engine/src/exceptions/: Error.cpp  FileError.cpp
engine/src/gl/: GLData.cpp  ShaderObject.cpp  ShaderProgram.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
engine/src/graphics/: Camera.cpp  Image.cpp  Mesh.cpp  Model.cpp  Shader.cpp  ShaderSource.cpp  Transform.cpp  Vertex.cpp  VertexAttribute.cpp  VertexData.cpp
engine/src/resources/: Image.cpp  Model.cpp  ModelScene.cpp  ResourceManager.cpp  Shader.cpp  ShaderSource.cpp
engine/src/utils/: File.cpp  (+4 more)
sample_game/: CMakeLists.txt  clean  run
sample_game/include/: CameraControls.hpp
sample_game/src/: main.cpp  runEngine.cpp
(+701 files in other folders)
